change caption of figure 3

--- a/body.tex
+++ b/body.tex
@@ -319,12 +319,13 @@ within an accuracy required for our study.
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/figure3}
 	\end{center}
-	\caption{Comparison of transmission data obtained using a self-energy
-	(black) with Lorentzian broadened complex eigenvalues of $\um{h}_D + \um{W}$
-	(red) for a model system as described in~\sref{subsec:modelsystem},
-	with device-lead gap of 0.45 nm.
-	The inset shows a close-up view of the \ac{HOMO}, with the HF \ac{HOMO}
-	shown in blue for reference.
+	\caption{Comparison of transmission data obtained using a Green
+	function method	(black) with Lorentzian broadened complex eigenvalues
+	of $\um{h}_D + \um{W}$ (red) for a model system as described
+	in~\sref{subsec:modelsystem}, with device-lead gap of 0.45 nm.
+	The inset shows a close-up view of the \ac{HOMO} (the black and red
+	curves overlap perfectly), with the dashed line indicating the HF
+	\ac{HOMO} for reference.
 	}
 	\label{fig:13evals}
 \end{figure}
