correct captioning and description of fig 3

--- a/body.tex
+++ b/body.tex
@@ -291,8 +291,8 @@ comparison to the scattering function transmissions (there is some
 indication of Fano-type resonances indicating that there is a degree of
 coupling between electrodes, but these small effects do not influence
 our analysis). To investigate this point, Lorentzian  resonances are
-constructed using the complex eigenvalues $\omega_i$ obtained from the 
-\acp{CAP} eq.~\ref{eq:capseq} with $\lambda=1$, 
+constructed using the complex eigenvalues $\omega_i$ obtained from
+\eref{eq:capseq} with $\lambda=1$, 
 \begin{equation}
         f(\varepsilon;\omega_i)
         = \frac{\left( \Gamma/2 \right)^2}
@@ -306,11 +306,12 @@ Lorentzian peak) is inversely proportional to the lifetime of the
 spectrum of the device obtained using explicit self-energies and a
 scattering calculation; the results of the comparison are shown in
 fig.~\ref{fig:13evals} for the chain system with molecule-lead separation
-of 0.45 nm (weak coupling case). The Green's function transmission and
-the peaks derived from the complex eigenvalues of $\um{h}_D + \um{W}$
-(green) agree extremely well, both in terms of the energy of the transmission
-peak (real part) and resonance width (imaginary part).  The inset in
-fig.~\ref{fig:13evals} displays the region around the \ac{HOMO} in
+of 0.45 nm (weak coupling case). The Green's function transmission (which
+we will denote by `Koopmans' in the rest of the paper, since it is derived
+from the complex Hartree-Fock problem) (black) and the peaks derived
+from the complex eigenvalues (red) agree extremely well, both in terms
+of the position of the transmission peak and resonance width. The inset
+in fig.~\ref{fig:13evals} displays the region around the \ac{HOMO} in
 detail, and reveals that the transmission peaks are well described by a
 Lorentzian profile and that the CAPs are able to reproduce \acp{QP}
 within an accuracy required for our study.
@@ -321,7 +322,7 @@ within an accuracy required for our study.
 	\end{center}
 	\caption{Comparison of transmission data obtained using a Green
 	function method	(black) with Lorentzian broadened complex eigenvalues
-	of $\um{h}_D + \um{W}$ (red) for a model system as described
+	from \eref{eq:capseq} (red) for a model system as described
 	in~\sref{subsec:modelsystem}, with device-lead gap of 0.45 nm.
 	The inset shows a close-up view of the \ac{HOMO} (the black and red
 	curves overlap perfectly), with the dashed line indicating the HF
