correct referencing of equations

--- a/body.tex
+++ b/body.tex
@@ -375,8 +375,8 @@ descriptions of electron correlations.
 In our analysis, we consider several different approximations for the CI
 wavefunction expansions. The first set of approximations are derived from
 CI expansions consisting of single excitations 
-\begin{equation}
-\label{singles}
+\begin{equation} 
+\label{eq:singles}
   \ket{\Psi_0} + \ket{\Psi_{S}}
   =
   \left(1 + \sum_{i,a} c_i^a \hat{a}_a^\dagger \hat{a}_i \right) \ket{\Psi_0},
@@ -392,16 +392,16 @@ considering Thouless' theorem~\cite{thouless} which relates two arbitrary
 determinants $\ket{\Psi_A}$ and $\ket{\Psi_B}$ through  an exponential
 operator as
 \begin{equation}
-\label{thouless}
+\label{eq:thouless}
 \ket{\Psi_A} = \exp \left( \sum_{i,a} c_i^a a_a^\dagger a_i \right) \ket{\Psi_B}.
-\end{equation}    
+\end{equation}     
 The exponential operator acts as a rotation to the single particle basis.
 For appropriately selected coefficients $c_i^a$, $\ket{\Psi_A}$ can be
 chosen as the single particle determinant which optimizes, for example,
 the energy on the extended device region. If the reference weight of
 $\ket{\Psi_0}$ in the singles wavefunction is large, then the expansion
-coefficients $c_i^a$ will be small and eq.~\ref{singles} becomes an
-approximation to the Thouless form eq.~(\ref{thouless}), accurate to first
+coefficients $c_i^a$ will be small and~\eref{eq:singles} becomes an
+approximation to the Thouless form~\eref{eq:thouless}, accurate to first
 order in the $c_i^a$. 
 
 From a many-electron standpoint, energy differences between many-electron
