transmission -> transmission spectra

--- a/body.tex
+++ b/body.tex
@@ -428,8 +428,8 @@ is the energy difference between the $(N-1)$- and $N$-electron states.
 The inclusion of the set of singly excited configurations allows a
 comparison on the explicit device region between a Koopmans approximation 
 (no orbital relaxation) and a \dscf approximation (inclusion of
-orbital relaxations).  For example, in the transmission displayed in
-fig.~\ref{fig:transdat}, the resonances correpsond to the eigenvalues of
+orbital relaxations).  For example, in the transmission spectra displayed
+in fig.~\ref{fig:transdat}, the resonances correpsond to the eigenvalues of
 the $N$ particle Fock matrix that are shifted in energy and broadened due
 to the presence of the electrode self-energies. Hence the \ac{HOMO} state
 corresponds to the IP for the extended device region but excluding the
