device -> device region

--- a/body.tex
+++ b/body.tex
@@ -452,7 +452,7 @@ or singles excitations to and from orbitals derived from the molecular
 region are allowed. In the second set of singles, all orbitals on the
 extended device region whether arising from the molecular or the explicit
 electrode regions are allowed. This latter approximation is referred to
-as the device singles. The CI singles as discussed remain a single
+as the device region singles. The CI singles as discussed remain a single
 particle description of the tunnel junction. To include correlations,
 MCCI calculations with coefficient thresholds of 0.003 and 0.001 are
 performed. Again, two such sets of calculations are performed. In the
