device -> device region again

--- a/body.tex
+++ b/body.tex
@@ -462,7 +462,7 @@ the coefficient threshold. These CSFs are labelled as CI(0.003) molecule
 and CI(0.001) molecule. For the extended device region, a single MCCI
 calculation is performed with a coefficient cut-off of 0.003 with
 excitations to and from all orbitals permitted. This set of CSFs is
-labelled CI(0.003) device. 
+labelled CI(0.003) device region. 
 
 \section{Quasiparticle States and Lifetimes}
 
