--- a/body.tex
+++ b/body.tex
@@ -458,11 +458,11 @@ MCCI calculations with coefficient thresholds of 0.003 and 0.001 are
 performed. Again, two such sets of calculations are performed. In the
 first set, only excitations to and from the molecular derived states are
 allowed and are retained in the MCCI procedure based upon the value of
-the coefficient threshold. These CSFs are labelled as CI(0.003) molecule
-and CI(0.001) molecule. For the extended device region, a single MCCI
-calculation is performed with a coefficient cut-off of 0.003 with
-excitations to and from all orbitals permitted. This set of CSFs is
-labelled CI(0.003) device region. 
+the coefficient threshold. These calculations are labelled as `CI(0.003)
+molecule' and `CI(0.001) molecule'. For the extended device region, a
+single MCCI calculation is performed with a coefficient cut-off of 0.003
+with excitations to and from all orbitals permitted. This set of calculations
+is labelled `CI(0.003) device region'. 
 
 \section{Quasiparticle States and Lifetimes}
 
