fig.\ref -> \fref

--- a/body.tex
+++ b/body.tex
@@ -259,7 +259,7 @@ The transmission is then calculated as
   \label{eq:transmfromG}
 \end{equation}
 where the \acp{CAP} play the role of the electrode self-energies.
-The comparison obtained in this manner is shown in fig.~\ref{fig:transdat},
+The comparison obtained in this manner is shown in~\fref{fig:transdat},
 revealing that the \ac{CAP} provides an accurate energy-independent
 representation of the self-energies and in particular, excellent agreement
 is achieved on the energy range around the \ac{HOMO}-\ac{LUMO} gap of
@@ -311,7 +311,7 @@ we will denote by `Koopmans' in the rest of the paper, since it is derived
 from the complex Hartree-Fock problem) (black) and the peaks derived
 from the complex eigenvalues (red) agree extremely well, both in terms
 of the position of the transmission peak and resonance width. The inset
-in fig.~\ref{fig:13evals} displays the region around the \ac{HOMO} in
+in~\fref{fig:13evals} displays the region around the \ac{HOMO} in
 detail, and reveals that the transmission peaks are well described by a
 Lorentzian profile and that the CAPs are able to reproduce \acp{QP}
 within an accuracy required for our study.
@@ -429,7 +429,7 @@ The inclusion of the set of singly excited configurations allows a
 comparison on the explicit device region between a Koopmans approximation 
 (no orbital relaxation) and a \dscf approximation (inclusion of
 orbital relaxations).  For example, in the transmission spectra displayed
-in fig.~\ref{fig:transdat}, the resonances correpsond to the eigenvalues of
+in~\fref{fig:transdat}, the resonances correpsond to the eigenvalues of
 the $N$ particle Fock matrix that are shifted in energy and broadened due
 to the presence of the electrode self-energies. Hence the \ac{HOMO} state
 corresponds to the IP for the extended device region but excluding the
@@ -479,7 +479,7 @@ tunnel junction as electron correlations are introduced.
 We start our analysis by considering the model with weaker coupling
 defined by a 0.45 nm gap between the electrodes and molecular region,
 and initially only including electronic excitations for orbitals localized
-on the molecular region. As can be seen in fig.~\ref{fig:13evals}, the
+on the molecular region. As can be seen in~\fref{fig:13evals}, the
 main effect of the electrode coupling at the single particle level is an
 energy shift in the HOMO level of 32 meV and a state broadening indicating
 a lifetime $\tau$ of approximately 223 fs, as calculated by
