using using -> using

--- a/body.tex
+++ b/body.tex
@@ -487,7 +487,7 @@ $\tau = \hbar / \Gamma$.
 
 Performing a molecular singles calculation with only molecule orbital
 excitations, we see the HOMO peak shifts upward in energy by 288 meV and
-the LUMO peak shifts downward in energy by 260 meV as seen in the blue
+the LUMO peak shifts downward in energy by 260 meV as seen in the red
 curves within figs.~\ref{fig:all45Ahomo} and \ref{fig:all45Alumo}, hence
 the overestimation of the bandgap typical of the Hartree-Fock approximation
 is compensated in the approximate \dscf calculation.
@@ -495,7 +495,7 @@ The electron lifetimes decrease substantially relative to the Koopmans
 states with the HOMO state lifetime becoming 59 fs and the LUMO state
 becoming 17 fs when self-consistency is allowed, indicating an increased
 molecule-electrode coupling. 
-Introducing electron correlations using using the molecule-like orbital
+Introducing electron correlations using the molecule-like orbital
 set and a coefficient threshold of 0.003 in the MCCI calculations lowers
 the molecular HOMO and increases the energy of the LUMO. Further increasing
 the correlation allowed with use of a MCCI coefficient threshold of 0.001,
