sanitization of Jim's doublespeak

--- a/body.tex
+++ b/body.tex
@@ -594,10 +594,8 @@ coupling of electrode exciations to the molecular excitations can have
 significant effects on current flow through a correlated two-level model
 system~\cite{galperin_nitzan2006leadexcitations}. 
 
-We study again the more weakly coupled model defined by a 0.45 nm gap
-between the electrodes and the molecular region, this time allowing
-excitations that are molecule-like as well as ones relating to orbitals
-from the explicit electrodes to enter the calculations;
+We start again the more weakly coupled model defined by a 0.45 nm gap
+between the electrodes and the molecular region;
 the results are displayed in \fref{fig:cidevregion}(a). 
 Since self-consistency is introduced by approximating Thouless' theorem
 with all single excitiations on the extended device region, the energy gap
