--- a/body.tex
+++ b/body.tex
@@ -608,7 +608,7 @@ decreases from the Koopmans estimate of 223 fs to 18 fs as obtained from
 the \dscf approximation. 
 However, much less resonant broadening is seen in this example for the
 LUMO state, with a lifetime of 85 fs from the Koopmans approximation
-and 121 fs from the $\Delta$SF calculation. The results of introducing
+and 121 fs from the \dscf calculation. The results of introducing
 correlation with a MCCI vector generated with a coefficient threshold of
 0.003 is seen in the blue curve of \fref{fig:cidevregion} and again a
 renormalization of the energy gap is seen.
