correct color of CI curve in fig 8a

--- a/body.tex
+++ b/body.tex
@@ -610,7 +610,7 @@ However, much less resonant broadening is seen in this example for the
 LUMO state, with a lifetime of 85 fs from the Koopmans approximation
 and 121 fs from the \dscf calculation. The results of introducing
 correlation with a MCCI vector generated with a coefficient threshold of
-0.003 is seen in the blue curve of \fref{fig:cidevregion} and again a
+0.003 is seen in the red curve of \fref{fig:cidevregion} and again a
 renormalization of the energy gap is seen.
 
 However, as electrode excitations are allowed to couple to the
