--- a/body.tex
+++ b/body.tex
@@ -619,7 +619,7 @@ are no longer bracketed by the Koopmans and \dscf peaks.
 There is also a difference in the behaviour for the HOMO and LUMO resonances.
 For the HOMO peak, the lifetime stays approximately the same as in the
 \dscf approximation whereas electron correlations broaden the LUMO
-peak from a lifetime of 121 fs from the \dscf approximation to 21
+peak from a lifetime of 121 fs in the \dscf approximation to 21
 fs. 
 
 As the electrode-molecule distance is reduced to 0.40 nm, the increased
