fixed some errors in the landauer almost-subsection

--- a/body.tex
+++ b/body.tex
@@ -634,15 +634,15 @@ the 0.45 nm case, whereas the LUMO state is significantly broader than
 all calculations previously presented with a lifetime of $\approx 2$ fs.
 In this case, the CI singles approximation to the $N+1$-electron state
 becomes multi-reference with two CSFs predominately contributing in the
-expansion. One of these CSFs has the additional electron in an electrode
-orbital, whereas the other consists of an additional electron into the
-molecule's LUMO. Hence in \dscf approximation to the LUMO, the electrodes
+expansion. One of these CSFs has the additional electron in the molecule's
+LUMO, whereas the other consists of an additional electron an electrode
+orbital. Hence in the \dscf approximation to the LUMO, the electrode
 and molecule regions are strongly coupled leading to a broad resonance.
 Introducing electron correlations with the MCCI vector obtained from a
 coefficient threshold of 0.003 leads to further anomalous behavior. The
-QP gap is again renormalized by the electron correlations, however in the
-case the HOMO state remains approximately unchanged although there is
-slightly more broadening and a small energy shift. However the character
+QP gap is again renormalized by the electron correlations, but the
+HOMO state remains approximately unchanged although there is
+slightly more broadening and a small energy shift. In contrast, the character
 of the LUMO state relative to the \dscf approximation changes: the
 electron correlations help to decouple the state from the electrodes
 resulting in a single dominant CSF in the CI expansion that describes the
@@ -661,17 +661,17 @@ by approximately 1 eV.
 \end{figure}
 
 Finally, as an illustration of how the changes in transmission curves would
-affect the devices' conductance properties, we calculate the $I-V$ curves
-for the 0.40 nm separated junction in the different approximations from
-the Landauer formula. In the top
-pane of \fref{fig:iv}, we have plotted the results for the \dscf (both
+affect the devices' conductance properties, we calculate the $I$-$V$ curves
+for the 0.40 nm separated junction in the different approximations using
+the Landauer formula.
+In \fref{fig:iv}(a), we have plotted the results for the \dscf (both
 molecule and device region) and Koopmans transmissions. The wide LUMO
 peak which was noted earlier for the device region case causes an earlier
 onset and higher final value of the current than in the case of the
 molecule. The Koopmans curve (plotted using only the HOMO and LUMO peaks)
 has a later onset, due to the larger bandgap.
 \Fref{fig:iv}(b) shows the current from the two CI
-transmissions. Due to the peaks in both cases being roughly the same
+transmission spectra. Due to the peaks in both cases being roughly the same
 width, the current reaches similar values for high voltages, but the
 higher position of both `device region' peaks relative to their `molecule'
 counterparts causes a different onset behavior.
@@ -690,8 +690,8 @@ counterparts causes a different onset behavior.
 		 The equilibrium Fermi
 		 energy was chosen to lie in the middle of the band gap
 		 of the leads, at $-4.42$ eV, and the electrochemical
-		 potentials in the electrodes are taken to move symmetrically
-		 as voltage is applied.}
+		 potentials in the electrodes are taken to move apart
+		 symmetrically as voltage is applied.}
 	\label{fig:iv}
 \end{figure}
  
