properly capitallize section titles

--- a/body.tex
+++ b/body.tex
@@ -57,7 +57,7 @@ to study how the \ac{QP} states evolve.
 \section{Methods}
 \label{sec:method}
 
-\subsection{Model System}
+\subsection{Model system}
 \label{subsec:modelsystem}
 
 The extended device we study is built from a simple atomic chain
@@ -93,7 +93,7 @@ construct the Hamiltonian matrix elements for the CI calculations.
 	\label{fig:chaincapdevice}
 \end{figure}
 
-\subsection{Complex Absorbing Potential}
+\subsection{Complex absorbing potential}
 \label{subsec:CAP}
 
 In defining models for atomic-scale transport junctions, a partitioning
@@ -331,7 +331,7 @@ within an accuracy required for our study.
 	\label{fig:13evals}
 \end{figure}
 
-\subsection{Complex Symmetric \ac{CI} Problem}
+\subsection{Complex symmetric \ac{CI} problem}
 
 All \ac{CI} calculations  are performed using a version of the \ac{MCCI}
 program~\cite{mcci1995, mcci1998} modified to treat the complex
@@ -464,7 +464,7 @@ single MCCI calculation is performed with a coefficient cut-off of 0.003
 with excitations to and from all orbitals permitted. This set of calculations
 is labelled `CI(0.003) device region'. 
 
-\section{Quasiparticle States and Lifetimes}
+\section{Quasiparticle states and lifetimes}
 
 Through the introduction of the \acp{CAP} describing the electrodes, the
 device region becomes an open system resulting in complex many-electron
@@ -701,8 +701,8 @@ counterparts causes a different onset behavior.
 This study has focused on the examination of the electronic structure
 treatment of molecular tunnel junctions, and in particular has studied
 the impact of the electronic structrure treatment on \ac{QP}
-energies and lifetimes. A simple model of a tunnel junction was introduced
-and consists of an atomic gold chain partitioned into left and right
+energies and lifetimes. A simple model of a tunnel junction was introduced,
+consisting of an atomic gold chain partitioned into left and right
 electrodes, and a central `molecule'. The electrode self-energies were
 approximated using complex absorbing potentials (\acp{CAP}) enabling the
 use of a \ac{CI} method. The use of the \acp{CAP} was
