--- a/QP_energies_and_lifetimes.tex
+++ b/QP_energies_and_lifetimes.tex
@@ -35,6 +35,7 @@
 	\acresetall % resets the acronyms so they will be expanded on first
 	            % occurrence in the text.
 \end{abstract}
+\pacs{73.63.Nm,85.65.+h,31.15.A-}
 
 \submitto{\NT}
 
