reword modified TM according to andreas' remarks

--- a/body.tex
+++ b/body.tex
@@ -78,7 +78,7 @@ one-dimensional band. The Fock and overlap matrices in the Hartree-Fock
 approximation are calculated  using the TURBOMOLE~\cite{turbomole} program
 package, and these matrices are used to calculate electron transmission
 in the absence of electron correlations with the TiMeS  program~\cite{times}.
-The one- and two-electron integrals from the Hartree-Fock calculations
+The one- and two-electron integrals of the Hartree-Fock molecular orbitals
 are generated using a modified version of TURBOMOLE and then used to
 construct the Hamiltonian matrix elements for the CI calculations.
 
