add acronyms for IP and EA

--- a/body.tex
+++ b/body.tex
@@ -410,7 +410,7 @@ and ionization energies, or respectively addition and substraction energies.
 In this study, the focus is on the electron affinities and ionization
 potentials of the {\it explicit} device region as these can be directly
 related to the quality of an electronic structure description for transport
-calculations~\cite{golden}. For example, the electron affinity is given
+calculations~\cite{golden}. For example, the \ac{EA} is given
 by the difference in complex energies for the $N$-electron state $\Omega^N$
 and the $(N+1)$-electron state $\Omega^{N+1}$
 \numparts
@@ -418,7 +418,7 @@ and the $(N+1)$-electron state $\Omega^{N+1}$
 \label{eq:EA}
 \omega_{\rm EA} = \Omega^{N+1} -\Omega^N,
 \end{equation}
-and similarly the ionization potential
+and similarly the \ac{IP}
 \begin{equation}
 \label{eq:IP}
 \omega_{\rm IP} =  \Omega^N - \Omega^{N-1}
@@ -432,18 +432,18 @@ orbital relaxations).  For example, in the transmission spectra displayed
 in~\fref{fig:transdat}, the resonances correpsond to the eigenvalues of
 the $N$ particle Fock matrix that are shifted in energy and broadened due
 to the presence of the electrode self-energies. Hence the \ac{HOMO} state
-corresponds to the IP for the extended device region but excluding the
+corresponds to the \ac{IP} for the extended device region but excluding the
 effects of relaxation of the other single electron states that occurs
 when an electron is removed. Likewise the LUMO measures the energy gained
 by attaching an electron onto the device region with all other electrons
-frozen. In this sense, the resonances are identified as Koopmans' IP and
-EA. If the IP and EA are calculated from a many-electron viewpoint and
+frozen. In this sense, the resonances are identified as Koopmans' \ac{IP} and
+\ac{EA}. If the \ac{IP} and \ac{EA} are calculated from a many-electron viewpoint and
 including all single excitations into the CI wavefunction,
 all other electrons can relax on the extended device region as the charge
 state is changed. As Thouless' theorem tells us that the CI singles
 energies $\Omega^{N-1}$ and $\Omega^{N+1}$ are approximations to the optimized
 single determinant energies with orbital relaxations for the device region,
-the EAs and IPs eqs.~\ref{eq:EA} and \ref{eq:IP} correspond to a \dscf
+the \acp{EA} and \acp{IP} eqs.~\ref{eq:EA} and \ref{eq:IP} correspond to a \dscf
 approximation. 
 
 Two types of CI singles approximations are considered. The first set are
@@ -503,9 +503,10 @@ the correlation allowed with use of a MCCI coefficient threshold of 0.001,
 but still only using molecule-like excitations, shifts both peaks back
 slightly in the opposite direction, decreasing the gap.
 These findings for the weakly coupled molecular state are consistent with
-typical findings for molecular systems: the Koopmans EAs and IPs are 
-underestimated and overestimated, respectively, whereas the \dscf
-procedure tends to overestimate and underestimate EAs and IPs, respectively.
+typical findings for molecular systems: the Koopmans \acp{EA} and \acp{IP}
+are  underestimated and overestimated, respectively, whereas the \dscf
+procedure tends to overestimate and underestimate \acp{EA} and \acp{IP},
+respectively.
 Introducing electron correlations then renormalizes the fundamental gap
 with the correlated energies for the HOMO and LUMO states bracketed by
 the Koopmans and \dscf estimates.
