incorporate ivana's recommendations about the intro

--- a/body.tex
+++ b/body.tex
@@ -46,13 +46,20 @@ In the following, we apply the method of \ac{CI} to a simple model of
 electrodes coupled to an atomic chain to investigate the influence of
 electron correlations on the \ac{QP} states of the device
 region. We explicitly consider the influence of electrode excitations as
-they couple to the device region. Opening of the system by the extended
+they couple to the device region, since these were previously shown to have
+a significant effect on condutance
+characteristics~\cite{galperin_nitzan2006leadexcitations}.
+Opening of the system by the extended
 electrodes is modeled by a \ac{CAP} which has been constructed specifically
 to yield the same complex energy eigenvalues as a conventional electrode
 self-energy produces~\cite{henderson}. This approach enables us to study
 the junction in an uncorrelated limit (single determinant approximation), and
 to systematically include electron correlations on the device region
 to study how the \ac{QP} states evolve. 
+We find that including lead excitations causes significant changes in the
+shifts and broadenings of \ac{QP} levels, indicating that it is important
+to capture these effects for an accurate treatment of electron transport
+in atomic chain systems.
 
 \section{Methods}
 \label{sec:method}
