add Ernzerhof refs to bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1620,3 +1620,70 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   publisher = {American Physical Society}
 }
 
+@article{ComplexDFTErnzerhof,
+  author = {Yongxi Zhou and Matthias Ernzerhof},
+  collaboration = {},
+  title = {Open-system Kohn-Sham density functional theory},
+  publisher = {AIP},
+  year = {2012},
+  journal = {The Journal of Chemical Physics},
+  volume = {136},
+  number = {9},
+  eid = {094105},
+  numpages = {7},
+  pages = {094105},
+  keywords = {ab initio calculations; density functional theory; HF calculations; molecular electronic states; molecular electronics; quantum chemistry},
+  url = {http://link.aip.org/link/?JCP/136/094105/1},
+  doi = {10.1063/1.3687922}
+}
+
+@article{SSPHubbard-Ernzerhof,
+  author = {Francois Goyer and Matthias Ernzerhof},
+  collaboration = {},
+  title = {Correlation effects in molecular conductors},
+  publisher = {AIP},
+  year = {2011},
+  journal = {The Journal of Chemical Physics},
+  volume = {134},
+  number = {17},
+  eid = {174101},
+  numpages = {10},
+  pages = {174101},
+  keywords = {conductors (electric); electron spin polarisation; molecular electronics},
+  url = {http://link.aip.org/link/?JCP/134/174101/1},
+  doi = {10.1063/1.3581096}
+}
+
+@article{SSP-Ernzerhof,
+  author = {Francois Goyer and Matthias Ernzerhof and Min Zhuang},
+  collaboration = {},
+  title = {Source and sink potentials for the description of open systems with a stationary current passing through},
+  publisher = {AIP},
+  year = {2007},
+  journal = {The Journal of Chemical Physics},
+  volume = {126},
+  number = {14},
+  eid = {144104},
+  numpages = {8},
+  pages = {144104},
+  keywords = {molecular electronics; current density; wave functions; conductors (electric); density functional theory},
+  url = {http://link.aip.org/link/?JCP/126/144104/1},
+  doi = {10.1063/1.2715932}
+}
+
+@article{SSP-extension-Ernzerhof,
+  author = {Philippe Rocheleau and Matthias Ernzerhof},
+  collaboration = {},
+  title = {Extension of the source-sink potential (SSP) approach to multichannel quantum transport},
+  publisher = {AIP},
+  year = {2012},
+  journal = {The Journal of Chemical Physics},
+  volume = {137},
+  number = {17},
+  eid = {174112},
+  numpages = {8},
+  pages = {174112},
+  keywords = {molecular electronics; organic compounds; wave functions},
+  url = {http://link.aip.org/link/?JCP/137/174112/1},
+  doi = {10.1063/1.4764291}
+}
