add paragraph referencing Ernzerhof work to intro

--- a/body.tex
+++ b/body.tex
@@ -42,6 +42,14 @@ of electron transport~\cite{pedersen_many_body_tunneling}, or through a
 many-electron scattering formulation of the transport
 problem~\cite{vici2004,greer2011}. 
 
+Conversely, the \ac{SSP} method was
+developed~\cite{SSP-Ernzerhof,SSP-extension-Ernzerhof}, which uses carefully
+tuned complex potential terms in the Hamiltonian to emulate electrons flowing
+into and out of the device. This method has been applied to molecular
+junctions with a complex variation of \ac{DFT}~\cite{ComplexDFTErnzerhof},
+and to simplified discrete model systems using a Hubbard Hamiltonian and
+\ac{CI}~\cite{SSPHubbard-Ernzerhof}.
+
 In the following, we apply the method of \ac{CI} to a simple model of
 electrodes coupled to an atomic chain to investigate the influence of
 electron correlations on the \ac{QP} states of the device
