add acronym for source-sink potential in acronyms.tex

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -10,3 +10,4 @@
 \acrodef{EA}{electron affinity}
 \acrodef{LDA}{local density approximation}
 \acrodef{QP}{quasiparticle}
+\acrodef{SSP}{source-sink potential}
