remove expansion of CAP in conclusion, add reference to Ernzerhof in conclusion

--- a/body.tex
+++ b/body.tex
@@ -720,8 +720,8 @@ the impact of the electronic structure treatment on \ac{QP}
 energies and lifetimes. A simple model of a tunnel junction was introduced,
 consisting of an atomic gold chain partitioned into left and right
 electrodes, and a central `molecule'. The electrode self-energies were
-approximated using complex absorbing potentials (\acp{CAP}) enabling the
-use of a \ac{CI} method. The use of the \acp{CAP} was
+approximated using \acp{CAP}, enabling the use of a \ac{CI} method.
+The use of the \acp{CAP} was
 validated against calculations using explicit electrode self-energies.
 The junction model was investigated using a non-self consistent single
 particle treatment or Koopmans treatment of \ac{QP} states, an
@@ -739,7 +739,8 @@ allow electronic excitations from the electrodes into the CI calculations,
 and those that did. In the case that electrode excitations were excluded
 from the \dscf and CI calculations, and for the range of electrode
 couplings we considered, it was found that the molecule in the junction
-behaved analogously to a free molecule. The Koopmans approximation
+behaved analogously to a free molecule, corroborating the findings
+in~\cite{SSPHubbard-Ernzerhof} for linear chains. The Koopmans approximation
 overestimated the QP energy gap, the \dscf approximation underestimated
 the gap, and including explicit electron correlations renormalized the
 energy gap with the HOMO and LUMO states being bracketed by the Koopmans
